WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237149
REGRESSION(
r290436
): fix build failures
https://bugs.webkit.org/show_bug.cgi?id=237149
Summary
REGRESSION(r290436): fix build failures
Devin Rousso
Reported
2022-02-24 11:53:25 PST
e.g. <
https://build.webkit.org/#/builders/368/builds/2908
> ``` /Volumes/Data/worker/monterey-release/build/Source/WebCore/PAL/pal/spi/cocoa/PassKitSPI.h:288:31: error: cannot find interface declaration for 'PKPaymentSummaryItem', superclass of 'PKShippingMethod' /Volumes/Data/worker/monterey-release/build/Source/WebCore/PAL/pal/spi/cocoa/PassKitSPI.h:308:37: error: unknown type name 'PKPaymentSummaryItem' /Volumes/Data/worker/monterey-release/build/Source/WebCore/PAL/pal/spi/cocoa/PassKitSPI.h:350:175: error: unknown type name 'PKPaymentAuthorizationStatus'; did you mean 'PKPaymentAuthorizationResult'? /Volumes/Data/worker/monterey-release/build/Source/WebCore/PAL/pal/spi/cocoa/PassKitSPI.h:350:204: error: interface type 'PKPaymentAuthorizationResult' cannot be passed by value; did you forget * in 'PKPaymentAuthorizationResult'? /Volumes/Data/worker/monterey-release/build/Source/WebCore/PAL/pal/spi/cocoa/PassKitSPI.h:350:220: error: unknown type name 'PKPaymentSummaryItem' /Volumes/Data/worker/monterey-release/build/Source/WebCore/PAL/pal/spi/cocoa/PassKitSPI.h:351:162: error: unknown type name 'PKPaymentAuthorizationStatus'; did you mean 'PKPaymentAuthorizationResult'? /Volumes/Data/worker/monterey-release/build/Source/WebCore/PAL/pal/spi/cocoa/PassKitSPI.h:351:191: error: interface type 'PKPaymentAuthorizationResult' cannot be passed by value; did you forget * in 'PKPaymentAuthorizationResult'? /Volumes/Data/worker/monterey-release/build/Source/WebCore/PAL/pal/spi/cocoa/PassKitSPI.h:351:253: error: unknown type name 'PKPaymentSummaryItem' /Volumes/Data/worker/monterey-release/build/Source/WebCore/PAL/pal/spi/cocoa/PassKitSPI.h:352:180: error: unknown type name 'PKPaymentSummaryItem' /Volumes/Data/worker/monterey-release/build/Source/WebCore/PAL/pal/spi/cocoa/PassKitSPI.h:482:33: error: expected a type /Volumes/Data/worker/monterey-release/build/Source/WebCore/PAL/pal/spi/cocoa/PassKitSPI.h:483:31: error: unknown type name 'PKPaymentAuthorizationStatus'; did you mean 'PKPaymentAuthorizationResult'? /Volumes/Data/worker/monterey-release/build/Source/WebCore/PAL/pal/spi/cocoa/PassKitSPI.h:483:60: error: interface type cannot be statically allocated /Volumes/Data/worker/monterey-release/build/Source/WebCore/PAL/pal/spi/cocoa/PassKitSPI.h:487:54: error: unknown type name 'PKPaymentSummaryItem' /Volumes/Data/worker/monterey-release/build/Source/WebCore/PAL/pal/spi/cocoa/PassKitSPI.h:488:37: error: unknown type name 'PKPaymentSummaryItem' /Volumes/Data/worker/monterey-release/build/Source/WebCore/PAL/pal/spi/cocoa/PassKitSPI.h:520:120: error: unknown type name 'PKPaymentButtonType'; did you mean 'PKPaymentMethodType'? /Volumes/Data/worker/monterey-release/build/Source/WebCore/PAL/pal/spi/cocoa/PassKitSPI.h:520:141: error: unknown type name 'PKPaymentButtonStyle' /Volumes/Data/worker/monterey-release/build/Source/WebCore/PAL/pal/cocoa/PassKitSoftLink.mm:84:170: error: unknown type name 'PKPaymentButtonType'; did you mean 'PKPaymentMethodType'? /Volumes/Data/worker/monterey-release/build/Source/WebCore/PAL/pal/cocoa/PassKitSoftLink.mm:84:196: error: unknown type name 'PKPaymentButtonStyle' /Volumes/Data/worker/monterey-release/build/Source/WebCore/PAL/pal/cocoa/PassKitSoftLink.mm:84:170: error: unknown type name 'PKPaymentButtonType'; did you mean 'PKPaymentMethodType'? fatal error: too many errors emitted, stopping now [-ferror-limit=] ```
Attachments
[fast-cq] Patch
(23.67 KB, patch)
2022-02-24 12:00 PST
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2022-02-24 12:00:38 PST
Created
attachment 453121
[details]
[fast-cq] Patch
EWS
Comment 2
2022-02-24 13:17:39 PST
Committed
r290456
(
247757@main
): <
https://commits.webkit.org/247757@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 453121
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-02-24 13:18:21 PST
<
rdar://problem/89435878
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug