REGRESSION(r290436): fix build failures https://bugs.webkit.org/show_bug.cgi?id=237149

Reviewed by Tim Horton.

Source/WebCore:

* Modules/applepay/cocoa/PaymentSessionErrorCocoa.mm:
(WebCore::PaymentSessionError::sessionError const):
* rendering/RenderThemeCocoa.mm:
(WebCore::RenderThemeCocoa::adjustApplePayButtonStyle const):
Replace `PAL::get_PassKitCore_*()` with `#define` declared in `<pal/cocoa/PassKitSoftLink.h>`.

Source/WebCore/PAL:

* pal/spi/cocoa/PassKitSPI.h:
* pal/spi/cocoa/PassKitInstallmentsSPI.h:
Undo some of the changes in r290436 by re-adding the old `#import` pre-r290436 when we do
not have PassKit modularization (i.e. `HAVE(PASSKIT_MODULARIZATION)`). This way, the code
is the same as it was for older releases.

* pal/cocoa/PassKitSoftLink.h:
* pal/cocoa/PassKitSoftLink.mm:
Declare some `#define` for convenience (and so that if we need to change from `PassKitCore`
in the future we don't have to change any callsites).

Source/WebKit:

* Platform/cocoa/PaymentAuthorizationPresenter.mm:
(WebKit::toNSError):
* Platform/cocoa/WKPaymentAuthorizationDelegate.mm:
(-[WKPaymentAuthorizationDelegate _willFinishWithError:]):
* Shared/ApplePay/cocoa/WebPaymentCoordinatorProxyCocoa.mm:
(WebKit::toPKContactFields):
* Shared/ApplePay/mac/WebPaymentCoordinatorProxyMac.mm:
(WebKit::WebPaymentCoordinatorProxy::platformCanMakePayments):
(WebKit::WebPaymentCoordinatorProxy::platformShowPaymentUI):
Replace `PAL::get_PassKitCore_*()` with `#define` declared in `<pal/cocoa/PassKitSoftLink.h>`.

Source/WTF:

* wtf/PlatformHave.h:
Rename `HAVE_PASSKIT_UI` to `HAVE_PASSKIT_MODULARIZATION` so that it also involes `PassKitCore`.



Canonical link: https://commits.webkit.org/247757@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290456 268f45cc-cd09-0410-ab3c-d52691b4dbfc